--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,3 +22,7 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+
+SQUARE_READER_SDK_APPLICATION_ID={APPLICATION ID FROM STEP 1}
+SQUARE_READER_SDK_REPOSITORY_PASSWORD={REPO PASSWORD FROM STEP 1} 
+
